[package]
name = "ballast-survey"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Read-only inventory of reclaimable disk weight (Rust build artifacts, node_modules, .venv, caches)"
publish = false

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_must_use = "deny"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "warn"
mem_forget = "deny"
as_conversions = "warn"
float_arithmetic = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"

module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
humansize = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
walkdir = "2"
